--- a/src/main/resources/templates/timetracker/permission_settings.vm
+++ b/src/main/resources/templates/timetracker/permission_settings.vm
@@ -53,7 +53,7 @@
   <form name="adminSettingForm"  method="post" action="TimetrackerPermissionSettingsWebAction.jspa" class="aui">
     #if(!$message.isEmpty())
     <div id="error_message">
-      $i18n.getText($message)
+      #if($i18n.isKeyDefined($message))$i18n.getText($message)#else$message#end
     </div>
     #end
     
